Fix header on smaller screens. - Note: assumes flex-box, so it won't look pretty on older versions of Android browser, or older IE. (But I don't care!) - Fixes #2 - Fixes #14

--- a/design/sass/_mixins.scss
+++ b/design/sass/_mixins.scss
@@ -1,11 +1,11 @@
 /* _mixins.scss */
 
 /* Flexbox */
-@mixin align-items($values) {
-   -webkit-align-items: $values;
-   -moz-align-items: $values;
-   -ms-align-items: $values;
-   align-items: $values;
+@mixin align-content($values) {
+   -webkit-align-content: $values;
+   -moz-align-content: $values;
+   -ms-align-content: $values;
+   align-content: $values;
 }
 
 @mixin flexbox() {
